--- a/MicroTools/package.json
+++ b/MicroTools/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.0",
     "bootstrap": "^5.3.8",
+    "chart.js": "^4.5.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "three": "^0.181.1"
