--- a/MicroTools/package.json
+++ b/MicroTools/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.8",
     "chart.js": "^4.5.1",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.1.1",
     "three": "^0.181.1"
   },
