--- a/MicroTools/package.json
+++ b/MicroTools/package.json
@@ -17,6 +17,7 @@
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.1.1",
+    "ssim.js": "^3.5.0",
     "three": "^0.181.1"
   },
   "devDependencies": {
